# TucowsAssignment

./: .gitignore  README.md  create_output_json.py  database.py  find_graph_cycles.sql  get_paths.py  graph.xml  graph_utils.py  input.json  main.py  models.py  parse_json.py  populate_database.py  pyproject.toml  readme.md  validate_xml.py  writeup.md  writeup.txt
src/interview_test/: __init__.py  database_utils.py  graph_utils.py  json_utils.py  models.py  version.py
