[build-system]
requires = ["setuptools~=74.1", "setuptools_scm~=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "interview_test"
dynamic = ["version"]

[project.optional-dependencies]
test = []

[project.scripts]
interview_test = "interview_test:main"

[tool.setuptools_scm]
version_file = "src/interview_test/version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["interview_test.tests*"]