[build-system]
requires = ["setuptools~=74.1", "setuptools_scm~=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "interview_test"
dynamic = ["version"]
dependencies = [
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.34",
    "typing_extensions==4.12.2"
]

[project.scripts]
interview_test = "interview_test:main"

[tool.setuptools_scm]
version_file = "src/interview_test/version.py"

[tool.setuptools.packages.find]
where = ["src"]
